<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ljy.view.activity.BluetoothListActivity">

    <ljy.widget.TitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ljy.widget.TitleBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/socket_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_ip"
            />
        <EditText
            android:id="@+id/socket_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_port"
            />
        <Button
            android:id="@+id/buttion_connet_server"
            android:text="@string/connect_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/connectStat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/tosend_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_send_server"
            />

        <Button
            android:id="@+id/text_send_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_send" />

        <TextView
            android:text="当前速度："
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/serverMsg"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </TextView>
    </LinearLayout>
</LinearLayout>
