<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="ljy.view.activity.BluetoothListActivity">

        <ljy.widget.TitleBar
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ljy.widget.TitleBar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/socket_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_ip" />

            <EditText
                android:id="@+id/socket_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_port" />

            <Button
                android:id="@+id/buttion_connet_server"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_server" />

            <TextView
                android:id="@+id/connectStat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/socket_bind_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请输入需要绑定的wifi模块ip" />

            <Button
                android:id="@+id/buttion_bind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="绑定" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="当前绑定状态：" />

            <TextView
                android:id="@+id/bindStat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ALL" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="当前速度：" />

            <TextView
                android:id="@+id/serverMsg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_bind_save_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="存储数据" />

            <Button
                android:id="@+id/btn_bind_look_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="查看数据" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>